@@ -122,6 +122,7 @@ version 25-git (????-??-??):
     configurable working day hours and interval time - configuration variable
     phpui.timetable_working_hours (default "08:00-19:00")
     and phpui.timetable_working_hours_interval (default: '30' [minutes])[ravvar]
+  - enhancement: allow to filter invoice list by selected division [chilan]
 
 version 24.0 (2019-05-16):
 
